--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-api</artifactId>
+          <version>3.14.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   <build>
       <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
