--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn clean test
       - name: Report
         if: always()
-        run: mvn cluecumber-report:reporting
+        run: mvn cucumber-report:reporting
       - uses: actions/upload-artifact@v2
         if: always()
         with:
