--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,3 +1,6 @@
+# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+
 name: Java CI with Maven
 
 on:
@@ -10,25 +13,26 @@ jobs:
   build:
 
     runs-on: ${{ matrix.os }}
+
     strategy:
-      matrix:
-        os: [ windows-latest ]
+        matrix:
+          os: [ ubuntu-latest, windows-latest, macOS-latest ]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven
-        run: mvn clean test
-      - name: Report
-        if: always()
-        run: mvn cucumber-report:reporting
-      - uses: actions/upload-artifact@v2
-        if: always()
-        with:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: '8'
+        distribution: 'adopt'
+        cache: maven
+    - name: Build with Maven
+      run: mvn clean test
+    - name: Report
+      if: always()
+      run: mvn cluecumber-report:reporting
+    - uses: actions/upload-artifact@v2
+      if: always()
+      with:
           name: my-artifact
           path: target/generated-report
