--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,4 +35,4 @@ jobs:
       if: always()
       with:
           name: my-artifact
-          path: target/generated-report
+          path: target\generated-report
